--- a/The Black Town Site/tbt_members.html
+++ b/The Black Town Site/tbt_members.html
@@ -395,6 +395,28 @@
             </div>
             <div class="outer">
                 <div class="img">
+                    <img src="./Member Image/tashdeed.jpg" alt="Tashdeed">
+                </div>
+                <div class="keyword">
+                    <span>Fabric Engineering</span>
+                    <span>দূর্বার-০২</span>
+                </div>
+                <div class="htxt">
+                    <h1>Tashdeed Shahriar Ahmed</h1>
+
+                </div>
+                <div class="ptxt">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem laudantium placeat facere libero
+                        vero
+                        optio, </p>
+                </div>
+                <span class="button">
+                    <a href="https://www.facebook.com/tashdeedshahriar.ahmed" target="_blank"><i
+                            class="fa fa-facebook-f" style="font-size:20px; padding: 2px;"></i> </a>
+                </span>
+            </div>
+            <div class="outer">
+                <div class="img">
                     <img src="./Member Image/Emam.jpg" alt="Emam">
                 </div>
                 <div class="keyword">
@@ -414,7 +436,9 @@
                     <a href="https://www.facebook.com/profile.php?id=100063341516333" target="_blank"><i
                             class="fa fa-facebook-f" style="font-size:20px; padding: 2px;"></i> </a>
                 </span>
-            </div>
+            </div>            
+        </div>
+        <div class="cards">
             <div class="outer">
                 <div class="img">
                     <img src="./Member Image/kabbo.jpg" alt="kabbo">
@@ -434,6 +458,28 @@
                 </div>
                 <span class="button">
                     <a href="https://www.facebook.com/kabbyo.das.9" target="_blank"><i class="fa fa-facebook-f"
+                            style="font-size:20px; padding: 2px;"></i> </a>
+                </span>
+            </div>
+            <div class="outer">
+                <div class="img">
+                    <img src="./Member Image/masfiq.jpg" alt="masfiq">
+                </div>
+                <div class="keyword">
+                    <span>Fabric Engineering</span>
+                    <span>তারুণ্য-০৩</span>
+                </div>
+                <div class="htxt">
+                    <h1>Md. Masfiq Ahmed </h1>
+
+                </div>
+                <div class="ptxt">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem laudantium placeat facere libero
+                        vero
+                        optio, </p>
+                </div>
+                <span class="button">
+                    <a href="https://www.facebook.com/md.masfiq.ahmed.301501" target="_blank"><i class="fa fa-facebook-f"
                             style="font-size:20px; padding: 2px;"></i> </a>
                 </span>
             </div>
